--- a/ACL4SSR_Online_Full.ini
+++ b/ACL4SSR_Online_Full.ini
@@ -77,6 +77,12 @@ custom_proxy_group=🇸🇬 狮城节点`url-test`(新加坡|坡|狮城|SG|Singa
 custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎥 奈飞节点`select`(NF|奈飞|解锁|Netflix|NETFLIX|Media)
 ;设置分组标志位
+rules:
+   - DOMAIN-SUFFIX,dmm.co.jp,🇯🇵 Akile日本
+   - DOMAIN-SUFFIX,dmm.com,🇯🇵 Akile日本
+   - DOMAIN-SUFFIX,mgsatge.com,🇯🇵 Akile日本
+   - DOMAIN-SUFFIX,javdb365.com,🇭🇰 香港节点
+   - DOMAIN-SUFFIX,jdbstatic.com,🇭🇰 香港节点
 
 enable_rule_generator=true
 overwrite_original_rules=true
