--- a/tsutsu-full-urltest-imm.ini
+++ b/tsutsu-full-urltest-imm.ini
@@ -17,14 +17,13 @@ ruleset=🎥 Netflix,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/R
 ruleset=📺 巴哈姆特,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Bahamut.list
 ruleset=🌏 国内媒体,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=🌍 国外媒体,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-ruleset=🌏 出海媒体,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
-ruleset=🌏 出海媒体,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/Ruleset/IqiyiHMT.list
+ruleset=🌏 出海媒体,https://raw.githubusercontent.com/FNTDemo/VPIT/refs/heads/main/DMM.list
 ruleset=🚀 全局设置,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list
 ruleset=🎯 国内网络,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=🎯 国内网络,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 国内网络,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
 ruleset=🎯 国内网络,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Clash/Download.list
-ruleset=🐼 つつ,https://cdn.statically.io/gh/lhl77/sub-ini/master/tsutsuDomain.list
+ruleset=🐼 つつ,https://raw.githubusercontent.com/FNTDemo/VPIT/refs/heads/main/JAVDB.list
 ruleset=🎯 国内网络,[]GEOIP,CN
 ruleset=🐟 其他网站,[]FINAL
 custom_proxy_group=🚀 全局设置`select`[]♻️ 自动选择`[]🚀 手动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇦🇺 澳洲节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇵🇱 波兰节点`[]🇳🇱 荷兰节点`[]🇪🇸 西班牙节点`[]🇮🇸 冰岛节点`[]🇩🇰 丹麦节点`[]🇨🇦 加拿大节点`[]🇧🇷 巴西节点`[]DIRECT
