--- a/tsutsu-full-urltest-imm.ini
+++ b/tsutsu-full-urltest-imm.ini
@@ -26,43 +26,33 @@ ruleset=🎯 国内网络,https://cdn.statically.io/gh/ACL4SSR/ACL4SSR/master/Cl
 ruleset=🐼 つつ,https://raw.githubusercontent.com/FNTDemo/VPIT/refs/heads/main/JAVDB.list
 ruleset=🎯 国内网络,[]GEOIP,CN
 ruleset=🐟 其他网站,[]FINAL
-custom_proxy_group=🚀 全局设置`select`[]♻️ 自动选择`[]🚀 手动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇦🇺 澳洲节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇵🇱 波兰节点`[]🇳🇱 荷兰节点`[]🇪🇸 西班牙节点`[]🇮🇸 冰岛节点`[]🇩🇰 丹麦节点`[]🇨🇦 加拿大节点`[]🇧🇷 巴西节点`[]DIRECT
+custom_proxy_group=🚀 全局设置`select`[]♻️ 自动选择`[]🚀 手动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[] DIRECT
 custom_proxy_group=🚀 手动选择`select`.*
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🎯 国内网络`select`[]DIRECT`[]🚀 全局设置`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇦🇺 澳洲节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇵🇱 波兰节点`[]🇳🇱 荷兰节点`[]🇪🇸 西班牙节点`[]🇮🇸 冰岛节点`[]🇩🇰 丹麦节点`[]🇨🇦 加拿大节点`[]🇧🇷 巴西节点`[]🚀 手动选择
-custom_proxy_group=📲 Telegram`select`[]🚀 全局设置`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇦🇺 澳洲节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇵🇱 波兰节点`[]🇳🇱 荷兰节点`[]🇪🇸 西班牙节点`[]🇮🇸 冰岛节点`[]🇩🇰 丹麦节点`[]🇨🇦 加拿大节点`[]🇧🇷 巴西节点`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=📹 Youtube`select`[]🚀 全局设置`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇦🇺 澳洲节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇵🇱 波兰节点`[]🇳🇱 荷兰节点`[]🇪🇸 西班牙节点`[]🇮🇸 冰岛节点`[]🇩🇰 丹麦节点`[]🇨🇦 加拿大节点`[]🇧🇷 巴西节点`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🎥 Netflix`select`[]🚀 全局设置`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇦🇺 澳洲节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇵🇱 波兰节点`[]🇳🇱 荷兰节点`[]🇪🇸 西班牙节点`[]🇮🇸 冰岛节点`[]🇩🇰 丹麦节点`[]🇨🇦 加拿大节点`[]🇧🇷 巴西节点`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=🎯 国内网络`select`[]DIRECT`[]🚀 全局设置`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[] 🚀 手动选择
+custom_proxy_group=📲 Telegram`select`[]🚀 全局设置`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[] 🚀 手动选择`[]DIRECT
+custom_proxy_group=📹 Youtube`select`[]🚀 全局设置`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[] 🚀 手动选择`[]DIRECT
+custom_proxy_group=🎥 Netflix`select`[]🚀 全局设置`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[] 🚀 手动选择`[]DIRECT
 custom_proxy_group=📺 巴哈姆特`select`[]🇨🇳 台湾节点`[]🚀 全局设置`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🐼 つつ`select`[]🚀 全局设置`[]DIRECT`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇦🇺 澳洲节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇵🇱 波兰节点`[]🇳🇱 荷兰节点`[]🇪🇸 西班牙节点`[]🇮🇸 冰岛节点`[]🇩🇰 丹麦节点`[]🇨🇦 加拿大节点`[]🇧🇷 巴西节点`[]🚀 手动选择
-custom_proxy_group=🌍 国外媒体`select`[]🚀 全局设置`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇦🇺 澳洲节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇵🇱 波兰节点`[]🇳🇱 荷兰节点`[]🇪🇸 西班牙节点`[]🇮🇸 冰岛节点`[]🇩🇰 丹麦节点`[]🇨🇦 加拿大节点`[]🇧🇷 巴西节点`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇦🇺 澳洲节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇵🇱 波兰节点`[]🇳🇱 荷兰节点`[]🇪🇸 西班牙节点`[]🇮🇸 冰岛节点`[]🇩🇰 丹麦节点`[]🇨🇦 加拿大节点`[]🇧🇷 巴西节点`[]🚀 手动选择
-custom_proxy_group=🌏 出海媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇦🇺 澳洲节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇵🇱 波兰节点`[]🇳🇱 荷兰节点`[]🇪🇸 西班牙节点`[]🇮🇸 冰岛节点`[]🇩🇰 丹麦节点`[]🇨🇦 加拿大节点`[]🇧🇷 巴西节点`[]🚀 手动选择
-custom_proxy_group=📢 谷歌FCM`select`[]🚀 全局设置`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇦🇺 澳洲节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇵🇱 波兰节点`[]🇳🇱 荷兰节点`[]🇪🇸 西班牙节点`[]🇮🇸 冰岛节点`[]🇩🇰 丹麦节点`[]🇨🇦 加拿大节点`[]🇧🇷 巴西节点`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=Ⓜ️ 微软云盘`select`[]🚀 全局设置`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇦🇺 澳洲节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇵🇱 波兰节点`[]🇳🇱 荷兰节点`[]🇪🇸 西班牙节点`[]🇮🇸 冰岛节点`[]🇩🇰 丹麦节点`[]🇨🇦 加拿大节点`[]🇧🇷 巴西节点`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🍎 苹果服务`select`[]🚀 全局设置`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇦🇺 澳洲节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇵🇱 波兰节点`[]🇳🇱 荷兰节点`[]🇪🇸 西班牙节点`[]🇮🇸 冰岛节点`[]🇩🇰 丹麦节点`[]🇨🇦 加拿大节点`[]🇧🇷 巴西节点`[]🚀 手动选择`[]DIRECT
-custom_proxy_group=🎮 国际游戏`select`[]🚀 全局设置`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇦🇺 澳洲节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇵🇱 波兰节点`[]🇳🇱 荷兰节点`[]🇪🇸 西班牙节点`[]🇮🇸 冰岛节点`[]🇩🇰 丹麦节点`[]🇨🇦 加拿大节点`[]🇧🇷 巴西节点`[]🚀 手动选择`[]DIRECT
+custom_proxy_group=🐼 つつ`select`[]🚀 全局设置`[]DIRECT`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[] 🚀 手动选择
+custom_proxy_group=🌍 国外媒体`select`[]🚀 全局设置`[]♻️ 自动选择`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[] 🚀 手动选择`[]DIRECT
+custom_proxy_group=🌏 国内媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[] 🚀 手动选择
+custom_proxy_group=🌏 出海媒体`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[] 🚀 手动选择
+custom_proxy_group=📢 谷歌FCM`select`[]🚀 全局设置`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[] 🚀 手动选择`[]DIRECT
+custom_proxy_group=Ⓜ️ 微软云盘`select`[]🚀 全局设置`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[] 🚀 手动选择`[]DIRECT
+custom_proxy_group=🍎 苹果服务`select`[]🚀 全局设置`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[] 🚀 手动选择`[]DIRECT
+custom_proxy_group=🎮 国际游戏`select`[]🚀 全局设置`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[] 🚀 手动选择`[]DIRECT
 custom_proxy_group=🎶 网易音乐`select`[]DIRECT`[]🚀 全局设置`[]♻️ 自动选择`(网易|音乐|Music|NetEase)
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 其他网站`select`[]🚀 全局设置`[]♻️ 自动选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇷🇺 俄罗斯节点`[]🇮🇳 印度节点`[]🇦🇺 澳洲节点`[]🇩🇪 德国节点`[]🇫🇷 法国节点`[]🇵🇱 波兰节点`[]🇳🇱 荷兰节点`[]🇪🇸 西班牙节点`[]🇮🇸 冰岛节点`[]🇩🇰 丹麦节点`[]🇨🇦 加拿大节点`[]🇧🇷 巴西节点`[]🚀 手动选择
-custom_proxy_group=🇭🇰 香港节点`url-test`(HKG)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本节点`url-test`(JPN)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 新加坡节点`url-test`(SGP)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国节点`url-test`(USA)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇨🇳 台湾节点`url-test`(TWN)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 韩国节点`url-test`(KOR)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇷🇺 俄罗斯节点`url-test`(RUS)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇮🇳 印度节点`url-test`(IND)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇦🇺 澳洲节点`url-test`(AUS)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇩🇪 德国节点`url-test`(DEU)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇫🇷 法国节点`url-test`(FRA)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇵🇱 波兰节点`url-test`(POL)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇳🇱 荷兰节点`url-test`(NLD)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇪🇸 西班牙节点`url-test`(ESP)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇮🇸 冰岛节点`url-test`(ISL)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇩🇰 丹麦节点`url-test`(DNK)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇨🇦 加拿大节点`url-test`(CAN)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇧🇷 巴西节点`url-test`(GBR)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🐟 其他网站`select`[]🚀 全局设置`[]♻️ 自动选择`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇺🇲 美国节点`[]🇨🇳 台湾节点`[]🇰🇷 韩国节点`[]🇬🇧 英国节点`[]🇩🇪 德国节点`[] 🚀 手动选择
+custom_proxy_group=🇭🇰 香港节点`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本节点`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 新加坡节点`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国节点`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇨🇳 台湾节点`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国节点`url-test`(KR|Korea|KOR|首尔|韩|韓)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇬🇧 英国节点`url-test`(GBR|GB|英|英国|UK)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇩🇪 德国节点`url-test`(DEU|DE|德国|德|Germany)`http://www.gstatic.com/generate_204`300,,50
 enable_rule_generator=true
 overwrite_original_rules=true
